# signal-laundering-deepfake

./: .gitignore  .gitmodules  README.md  analyze_stability.py  eval_suite.py  layer_sweep.py  log.txt  pyproject.toml  requirements.txt  run.py  train_probe.py  train_ssl_backend.py
configs/: M_params.yaml  N_params.yaml  P_params.yaml  hubert_probe.yaml  wav2vec2_probe.yaml  wavlm_probe.yaml
exp_result/LA_RawNet2_baseline_ep100_bs32/: config.conf  eval_scores_using_best_dev_model.txt  events.out.tfevents.1771947081.LAPTOP-39G5FNF3.9824.0  events.out.tfevents.1771947203.LAPTOP-39G5FNF3.3272.0  events.out.tfevents.1771947432.LAPTOP-39G5FNF3.16032.0  events.out.tfevents.1771947697.LAPTOP-39G5FNF3.12092.0  events.out.tfevents.1771968199.LAPTOP-39G5FNF3.22224.0  metric_log.txt  t-DCF_EER.txt
exp_result/LA_RawNet2_baseline_ep100_bs32/metrics/: dev_score.txt  (+4 more)
scripts/: download_noise.ps1  noise_setup.py  run_eval.sbatch  run_full_pipeline.py  run_full_pipeline.sbatch  run_hubert_rawnet2.sbatch
slurm/: README.md  eval_aasist.sbatch  eval_rawnet2.sbatch  eval_ssl_grid.sbatch  layer_sweep.sbatch  submit_all.sh  train_aasist.sbatch  train_rawnet2.sbatch  train_ssl_backends.sbatch
src/: __init__.py
src/evaluation/: __init__.py  cka.py  metrics.py  plots.py  results_writer.py
src/laundering/: __init__.py  core.py  pipeline_M.py  pipeline_N.py  pipeline_P.py  utils.py
src/models/: __init__.py  aasist_wrapper.py  backends.py  dataset.py  hubert_frontend.py  model_config.py  rawnet2_wrapper.py  registry.py  ssl_eval_wrapper.py  ssl_frontend.py  ssl_probe_wrapper.py
