[project]
name = "signal-laundering-deepfake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "soundfile>=0.13.1",
    "tensorboard>=2.20.0",
    "torch>=2.10.0",
    "torchcontrib>=0.0.2",
    "tqdm>=4.67.3",
]
